// -*- mode: text; -*-

This file is referred by some automatic release scripts.

[Release History (Japanese)]
<!-- BEGIN-LATEST-JP -->
<li>Polaris Engine 1.2.37 2024/5/12
  <ul>
    <li>ソローさんが日本語ノベルと英語ノベルのテンプレートを刷新</li>
  </ul>
</li>
<!-- END-LATEST-JP -->
<li>Polaris Engine 1.2.36 2024/5/11
  <ul>
    <li>キャラの目パチと口パクの画像を改善</li>
  </ul>
</li>
<li>Polaris Engine 1.2.35 2024/5/10
  <ul>
    <li>音量の初期値が適用されないバグを修正</li>
  </ul>
</li>
<li>Polaris Engine 1.2.34 2024/5/10
  <ul>
    <li>リップシンクの文字間隔 character.lipsync.chars を追加</li>
  </ul>
</li>
<li>Polaris Engine 1.2.33 2024/5/10
  <ul>
    <li>リップシンクを改善</li>
  </ul>
</li>
<li>Polaris Engine 1.2.32 2024/5/10
  <ul>
    <li>リップシンクを改善</li>
    <li>目パチ画像の追加</li>
  </ul>
</li>
<li>Polaris Engine 1.2.31 2024/5/10
  <ul>
    <li>プロジェクトファイルの拡張子を関連付け</li>
  </ul>
</li>
<li>Polaris Engine 1.2.30 2024/5/10
  <ul>
    <li>アップデートすると最後に開いたフォルダを忘れる問題を修正</li>
  </ul>
</li>
<li>Polaris Engine 1.2.29 2024/5/10
  <ul>
    <li>Look&Feel変更とコマンド挿入前にシナリオテキストをスクリプトモデルに反映するよう変更</li>
  </ul>
</li>
<li>Polaris Engine 1.2.28 2024/5/10
  <ul>
    <li>最後に開いたフォルダを保存するように変更</li>
  </ul>
</li>
<li>Polaris Engine 1.2.27 2024/5/10
  <ul>
    <li>ファイル選択ダイアログの改善</li>
    <li>Undo/Redoをいったん封印 (リッチエディットコントロールの制約)</li>
    <li>全画面時にメニューバーを表示</li>
  </ul>
</li>
<li>Polaris Engine 1.2.26 2024/5/10
  <ul>
    <li>オートモードスライダーのバグ修正</li>
  </ul>
</li>
<li>Polaris Engine 1.2.25 2024/5/9
  <ul>
    <li>ファイル選択のバグを回避</li>
  </ul>
</li>
<li>Polaris Engine 1.2.24 2024/5/9
  <ul>
    <li>「続ける」ボタンを押したときに編集を反映するように修正</li>
    <li>Ctrlキーのバグを修正</li>
    <li>ファイル選択のバグを修正</li>
  </ul>
</li>
<li>Polaris Engine 1.2.23 2024/5/9
  <ul>
    <li>Linuxでのビルドを改善 (RedHat系に対応)</li>
  </ul>
</li>
<li>Polaris Engine 1.2.22 2024/5/9
  <ul>
    <li>文字色を元に戻す装飾を追加</li>
  </ul>
</li>
<li>Polaris Engine 1.2.21 2024/5/9
  <ul>
    <li>補完以外の場合、タブキーで4つスペースを入力するように変更</li>
  </ul>
</li>
<li>Polaris Engine 1.2.20 2024/5/9
  <ul>
    <li>ファイル選択のキャンセル時にシナリオが再ロードされるバグを修正</li>