@@ -129,55 +129,55 @@
 <ul>
 	<li>テンプレートゲーム
 		<ul>
-			<li>日本語ライト・ダーク: ゲームクリエイタ/SOrow</li>
-			<li>日本語縦書き: ゲームクリエイタ/あさつき</li>
+			<li>ライト|ダーク|ノベル: ゲームクリエイタ / SOrow</li>
+			<li>縦書きノベル: ゲームクリエイタ / あさつき</li>
 		</ul>
 	</li>
 	<li>キャラクタデザイン
 		<ul>
-			<li>みどり: イラストレータ/ぽにこ (@gigzagu123)</li>
+			<li>みどり: イラストレータ / ぽにこ (@gigzagu123)</li>
 		</ul>
 	</li>
 	<li>声の出演
 		<ul>
-			<li>日本語: 声優/しぐれるぅ。 (@sigureruu)</li>
-			<li>英語: NHKラジオ基礎英語/カレン・ヘドリック <a href="https://www.karenvoice.jp/">Karen Voice</a></li>
+			<li>日本語: 声優 / しぐれるぅ。 (@sigureruu)</li>
+			<li>英語: NHKラジオ基礎英語 / カレン・ヘドリック <a href="https://www.karenvoice.jp/">Karen Voice</a></li>
 		</ul>
 	</li>
 	<li>背景
 		<ul>
-			<li>ゲームクリエイタ/つる</li>
+			<li>ゲームクリエイタ / つる</li>
 		</ul>
 	</li>
 	<li>音楽
 		<ul>
-			<li>制作ディレクタ/80</li>
+			<li>制作ディレクタ / 80</li>
 		</ul>
 	</li>
 	<li>エフェクトとルール画像
 		<ul>
-			<li>ゲームクリエイタ/SOrow</li>
+			<li>ゲームクリエイタ / SOrow</li>
 		</ul>
 	</li>
 	<li>デフォルトのアイコン
 		<ul>
-			<li>漫画家/龍龍(Ronron) (@RonronAmethyst)</li>
+			<li>漫画家 / 龍龍(Ronron) (@RonronAmethyst)</li>
 		</ul>
 	</li>
 	<li>名前入力画面の設計
 		<ul>
-			<li>ゲームクリエイタ/ウビーニ</li>
-			<li>ゲームクリエイタ/あさつき</li>
+			<li>ゲームクリエイタ / ウビーニ</li>
+			<li>ゲームクリエイタ / あさつき</li>
 		</ul>
 	</li>
 	<li>初期のGUI機能設計とデザイン
 		<ul>
-			<li>デザイナ/MaxMorgan</li>
+			<li>デザイナ / MaxMorgan</li>
 		</ul>
 	</li>
 	<li>初期の機能検討とテスト
 		<ul>
-			<li>ゲームクリエイタ/マイマイ</li>
+			<li>ゲームクリエイタ / マイマイ</li>
 		</ul>
 	</li>
 </ul>
@@ -189,7 +189,7 @@
 <p>
 	エクスポートされたゲームが利用しているライブラリは下記の通りです。
 	実行ファイル中にこれらの著作権情報を埋め込んでいるため、ユーザーが重ねて謝辞を書く義務はありません。
-	なお、これらのライブラリが充実したおかげで、ここ20年にフリーなゲーム開発ツールがたくさん生まれたという事情があり、ユーザーからも謝辞を書いていただければこの上なくうれしいです。
+	なお、これらのライブラリが充実したおかげで、ここ20年にフリーなゲーム開発ツールがたくさん生まれたという事情があり、ユーザーからも重ねて謝辞を書いていただければこの上なくうれしいです。
 </p>
 <ul>
 	<li>画像
@@ -217,7 +217,6 @@
 			<li>Brotli: Copyright (c) 2009, 2010, 2013-2016 by the Brotli Authors. All rights reserved.</li>
 		</ul>
 	</li>
-	<li>Unityエクスポートに限り、Unityを使用 (家庭用ゲーム機専用)</li>
 </ul>
 
 <br>
@@ -226,20 +225,20 @@
 
 <h2>動作環境</h2>
 <br>
-<h3>Windows</h3>
+<h3>Microsoft Windows</h3>
 <ul>
 	<li>開発ツール
 		<ul>
-			<li>OS: Windows 11, Windows 10, Windows 8.1, Windows 8, Windows 7, Windows Vista, Windows XP (32bit動作)</li>
+			<li>OS: Windows 11, Windows 10, Windows 8.1, Windows 8, Windows 7, Windows Vista, Windows XP (すべて32bit動作)</li>
 			<li>CPU: Intel/AMD/Arm64</li>
-			<li>GPU: Direct3D 9</li>
+			<li>Graphics: Direct3D 9</li>
 		</ul>
 	</li>
 	<li>出力ゲーム
 		<ul>
-			<li>OS: Windows 11, Windows 10, Windows 8.1, Windows 8, Windows 7, Windows Vista, Windows XP (32bit動作)</li>
+			<li>OS: Windows 11, Windows 10, Windows 8.1, Windows 8, Windows 7, Windows Vista, Windows XP (すべて32bit動作)</li>
 			<li>CPU: Intel/AMD/Arm64</li>
-			<li>GPU: Direct3D 9</li>
+			<li>Graphics: Direct3D 9</li>
 		</ul>
 	</li>
 </ul>
@@ -270,8 +269,8 @@
 	</li>
 	<li>詳細
 		<ul>
-			<li>グラフィックス: Metal</li>
-			<li>SDK: AppKit</li>
+			<li>CPU: Apple Silicon, Intel Core</li>
+			<li>Framework: AppKit / Metal</li>
 		</ul>
 	</li>
 </ul>
@@ -281,46 +280,47 @@
 	<li>開発ツール
 		<ul>
 			<li>OS: Linux / FreeBSD / NetBSD
-			<li>グラフィックス: Qt6 (Vulkan or OpenGL backend)
+			<li>Graphics: Qt6 OpenGL 3.0
 		</ul>
 	</li>
 	<li>出力ゲーム
 		<ul>
 			<li>OS: Linux / FreeBSD / NetBSD
-			<li>グラフィックス: X11 and OpenGL 3.0
+			<li>Graphics: X11 OpenGL 3.0
 		</ul>
 	</li>
 </ul>
 <br>
-<h3>iOS/iPadOS/visionOS</h3>
+<h3>iOS</h3>
 <ul>
 	<li>開発ツール
 		<ul>
-			<li>iCloud Driveが必要 (有効にしておかないと起動できない)</li>
+			<li>iCloud Driveが必須</li>
 			<li>iOS 13 / iPadOS 13</li>
 			<li>iOS 14 / iPadOS 14</li>
 			<li>iOS 15 / iPadOS 15</li>
 			<li>iOS 16 / iPadOS 16</li>
 			<li>iOS 17 / iPadOS 17</li>
-			<li>visionOS 1</li>
+			<li>visionOS 1.0</li>
+			<li>visionOS 1.1</li>
 		</ul>
 	</li>
 	<li>出力ゲーム
 		<ul>
-			<li>iOS 11 (macOS 13 Venturaまででないとビルドできない)</li>
-			<li>iOS 12 (macOS 14 SonomaではiOS12以降のみビルド可能)</li>
+			<li>iOS 11</li>
+			<li>iOS 12</li>
 			<li>iOS 13 / iPadOS 13</li>
 			<li>iOS 14 / iPadOS 14</li>
 			<li>iOS 15 / iPadOS 15</li>
 			<li>iOS 16 / iPadOS 16</li>
 			<li>iOS 17 / iPadOS 17</li>
-			<li>visionOS 1</li>
+			<li>visionOS 1.0</li>
+			<li>visionOS 1.1</li>
 		</ul>
 	</li>
 	<li>詳細
 		<ul>
-			<li>グラフィックス: Metal</li>
-			<li>SDK: UIKit</li>
+			<li>Framework: UIKit / Metal</li>
 		</ul>
 	</li>
 </ul>
@@ -353,8 +353,8 @@
 	</li>
 	<li>詳細
 		<ul>
-			<li>グラフィックス: OpenGL ES 2.0</li>
-			<li>SDK: Android NDK</li>
+			<li>Gprahcics: OpenGL ES 2.0</li>
+			<li>SDK: Java / Android NDK</li>
 		</ul>
 	</li>
 </ul>
@@ -377,7 +377,7 @@
 	</li>
 	<li>詳細
 		<ul>
-			<li>グラフィックス: WebGL 2</li>
+			<li>Graphics: WebGL 2</li>
 			<li>SDK: Emscripten</li>
 		</ul>
 	</li>
@@ -385,11 +385,27 @@
 <br>
 <h3>家庭用ゲーム機版</h3>
 <ul>
-	<li>出力ゲーム (Unityエクスポート)
+	<li>出力ゲーム
 		<ul>
 			<li>Nintendo Switch</li>
 			<li>PlayStation 4/5</li>
 			<li>Xbox Series X|S</li>
+		</ul>
+	</li>
+	<li>詳細
+		<ul>
+			<li>Unity版
+				<ul>
+					<li>Unityを利用</li>
+					<li>現在はネイティブコードを併用(.soファイル)</li>
+					<li>直近でC#トランスレータを開発してネイティブコード不要化の予定</li>
+				</ul>
+			</li>
+			<li>ネイティブ版
+				<ul>
+					<li>各社SDKを直接利用 (非OSS)</li>
+				</ul>
+			</li>
 		</ul>
 	</li>
 </ul>
